# pointer_crash_example_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/pointer_crash_example_plugin_example/: MainActivity.kt
example/lib/: main.dart
lib/: pointer_crash_example_plugin.dart  pointer_crash_example_plugin_bindings_generated.dart
src/: CMakeLists.txt  pointer_crash_example_plugin.c  pointer_crash_example_plugin.h
